--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -249,7 +249,7 @@
 	font-size: 30px;
     color: #fff;
     font-weight: bold;
-    margin-bottom: inherit;
+    margin-bottom: auto;
     margin-top: 24px;
 }
 .vot{
