--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
 
-html,body {margin:0;padding:0;height:100%; font-family: GothamPro ,Arial, Helvetica, sans-serif;background:#171717;}
+html,body {margin:0;padding:0; font-family: GothamPro ,Arial, Helvetica, sans-serif;background:#171717;}
 
 * {-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 button:focus { outline:none;}
