--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -1046,6 +1046,7 @@ overflow:hidden; resize:none;
 		width: 100%;
     max-width: 375px;
 		height: auto;
+		z-index: 999;
 	}
 	.main .menu ul{
 		display: inline-flex !important;
@@ -1471,7 +1472,7 @@ overflow:hidden; resize:none;
     height: 100%;
     display: grid;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 170px;
 	}
 	.main .content .menu1 .tab .tt{
 	width: 80%;
