--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -1562,6 +1562,9 @@ overflow:hidden; resize:none;
 }
 }
 @media (min-width: 768px){
+	.col-6 {
+    width: auto; 
+}
 	.main .menu ul li {
     height: auto;
     height: 36px;
