--- a/assets/css/stylepc.css
+++ b/assets/css/stylepc.css
@@ -1562,7 +1562,7 @@ overflow:hidden; resize:none;
 }
 }
 @media (min-width: 768px){
-	.col-6 {
+	.col-6 ,.col-4{
     width: auto; 
 }
 	.main .menu ul li {
